# web_scraper

./: README.md  pyproject.toml
bcv/: __init__.py  scraper.py
